--- a/learning/templates/login_.html
+++ b/learning/templates/login_.html
@@ -53,11 +53,14 @@
             </div>
         </div><!-- end container -->
     </div>
-    <!-- end authentication section -->
-    <!-- Bootstrap Js -->
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendors/jquery/jquery.js"></script>
+    <script src="/assets/vendors/bootstrap/bootstrap.js"></script>
+    <script src="/assets/vendors/counterup/waypoint.js"></script>
+    <script src="/assets/vendors/counterup/jquery.counterup.min.js"></script>
+    <script src="/assets/vendors/jquery.isotope.js"></script>
+    <script src="/assets/vendors/owl/owl.carousel.min.js"></script>
+    <script src="/assets/vendors/google-map/map.js"></script>
+    <script src="/assets/js/script.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
     <script>
@@ -66,29 +69,44 @@
         function test(){
             if(event.keyCode==13){
                 axios.post("/learning/login/",{
-                'username':$('#username').val(),
-                'password':$('#password').val()
-            }).then(res=>{
-                if(res.data.errno == 0){
-                    swal({
-                        'title':'登入成功',
-                        'text':'正在為您導向主畫面',
-                        'button':false,
-                        'icon':'success',
-                        'timer':1500,
-                    })
-                    setTimeout(()=>{
-                        location.href = '/learning/'
-                    },1500)
-                }else{
-                    swal({
-                        'title':'登入失敗',
-                        'text':'不符學員身份或帳號不存在',
-                        'button':['確認'],
-                        'icon':'error'
-                    })
-                }
-            })
+                    'username':$('#username').val(),
+                    'password':$('#password').val()
+                }).then(res=>{
+                    if(res.data.errno == 0){
+                        swal({
+                            'title':'登入成功',
+                            'text':'正在為您導向主畫面',
+                            'button':false,
+                            'icon':'success',
+                            'timer':1500,
+                        })
+                        setTimeout(()=>{
+                            location.href = '/learning/'
+                        },1500)
+                    }else if(res.data.errno == 1){
+                        swal({
+                            'title':'登入失敗',
+                            'text':'不符學員身份或帳號不存在',
+                            'button':['確認'],
+                            'icon':'error'
+                        })
+                    }else if (res.data.errno == 2){
+                        swal({
+                            'title':'登入失敗',
+                            'text':'錯誤',
+                            'button':['確認'],
+                            'icon':'error'
+                        })
+                    }
+                    else {
+                        swal({
+                            'title':'登入失敗',
+                            'text':'管理員帳號',
+                            'button':['確認'],
+                            'icon':'error'
+                        })
+                    }
+                })
             }
         }
         function login(){
