--- a/myadmin/templates/adminlogin.html
+++ b/myadmin/templates/adminlogin.html
@@ -7,9 +7,7 @@
     <meta name="description" content="Premium Bootstrap v5.1.3 Landing Page Template" />
     <meta name="keywords" content="bootstrap v5.1.3, premium, marketing, multipurpose" />
     <meta content="Themesdesign" name="author" />
-    <!-- Bootstrap css -->
     <link rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css" />
-    <!-- Custom css -->
     <link rel="stylesheet" href="/assets/css/style.min.css" type="text/css" />
 </head>
 <body>
@@ -52,9 +50,16 @@
     </div>
     <!-- end authentication section -->
     <!-- Bootstrap Js -->
-    <script src="/assets/js/jquery.js"></script>
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/vendors/jquery/jquery.js"></script>
+    <!-- Bootstrap 4.5 -->
+    <script src="/assets/vendors/bootstrap/bootstrap.js"></script>
+    <!-- Counterup -->
+    <script src="/assets/vendors/counterup/waypoint.js"></script>
+    <script src="/assets/vendors/counterup/jquery.counterup.min.js"></script>
+    <script src="/assets/vendors/jquery.isotope.js"></script>
+    <script src="/assets/vendors/owl/owl.carousel.min.js"></script>
+    <script src="/assets/vendors/google-map/map.js"></script>
+    <script src="/assets/js/script.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
     <script>
