--- a/myadmin/templates/create.html
+++ b/myadmin/templates/create.html
@@ -142,61 +142,64 @@
 </form>
     </div>
 </div>
-<script src="/assets/js/jquery.js"></script>
-<script src="/assets/js/jquery.min.js"></script>
+<script src="/assets/vendors/jquery/jquery.js"></script>
+<script src="/assets/vendors/bootstrap/bootstrap.js"></script>
+<script src="/assets/vendors/counterup/waypoint.js"></script>
+<script src="/assets/vendors/counterup/jquery.counterup.min.js"></script>
+<script src="/assets/vendors/jquery.isotope.js"></script>
+<script src="/assets/vendors/owl/owl.carousel.min.js"></script>
+<script src="/assets/vendors/google-map/map.js"></script>
+<script src="/assets/js/script.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script>
-    axios.post("/myadmin/info/").then(res=>{
-        if(res.data.errno == 0){
-            users = res.data.data
-            users.forEach(item=>{
-                $('#student_').append(`
-                    <tr id="student_${item.id}">
-                        <td>${item.date}</td>
-                        <td>${item.name}</td>
-                    </tr>
-                `)
-            })
-        }
-    })
-    function submit_register(){
-        axios.post('/myadmin/create/',{
-            'username':$('#username').val(),
-            'password':$('#password').val(),
-            'password2':$('#password2').val(),
-            'email':$('#email').val(),
-            'permission':$('#state').val()
-        }).then(res=>{
-            if(res.data.errno == 2){
-                swal({
-                     'title':'註冊失敗',
-                     'text':'密碼不相容',
-                     'button':['確認'],
-                     'icon':'error'
-                })
-            }
-            if(res.data.errno == 1){
-                swal({
-                     'title':'系統出錯',
-                     'text':'請重新登入或稍後再試',
-                     'button':['確認'],
-                     'icon':'error'
-                })
-            }
+        axios.post("/myadmin/info/").then(res=>{
             if(res.data.errno == 0){
-                swal({
-                     'title':'註冊成功',
-                     'text':'  ',
-                     'button':['確認'],
-                     'icon':'success'
+                users = res.data.data
+                users.forEach(item=>{
+                    $('#student_').append(`
+                        <tr id="student_${item.id}">
+                            <td>${item.date}</td>
+                            <td>${item.name}</td>
+                        </tr>
+                    `)
                 })
             }
         })
-    }
+        function submit_register(){
+            axios.post('/myadmin/create/',{
+                'username':$('#username').val(),
+                'password':$('#password').val(),
+                'password2':$('#password2').val(),
+                'email':$('#email').val(),
+                'permission':$('#state').val()
+            }).then(res=>{
+                if(res.data.errno == 2){
+                    swal({
+                         'title':'註冊失敗',
+                         'text':'密碼不相容',
+                         'button':['確認'],
+                         'icon':'error'
+                    })
+                }
+                if(res.data.errno == 1){
+                    swal({
+                         'title':'系統出錯',
+                         'text':'請重新登入或稍後再試',
+                         'button':['確認'],
+                         'icon':'error'
+                    })
+                }
+                if(res.data.errno == 0){
+                    swal({
+                         'title':'註冊成功',
+                         'text':'  ',
+                         'button':['確認'],
+                         'icon':'success'
+                    })
+                }
+            })
+        }
 </script>
 {% endblock %}
 
