--- a/myadmin/templates/info.html
+++ b/myadmin/templates/info.html
@@ -14,14 +14,12 @@
 }
 </style>
 <header>
-
     <div class="site-navigation main_menu menu-transparent" id="mainmenu-area">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid container-padding">
                 <a class="navbar-brand" href="index.html">
                     <img src="/img/logo_4.png" alt="Eduhash" class="img-fluid">
                 </a>
-
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMenu" aria-controls="navbarMenu" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="fa fa-bars"></span>
                 </button>
@@ -44,8 +42,8 @@
                                 登出
                             </a>
                     </div>
-                </div> <!-- / .navbar-collapse -->
-            </div> <!-- / .container -->
+                </div>
+            </div>
         </nav>
     </div>
 </header>
@@ -101,11 +99,17 @@
         background: #F5F5F5;
         border: 1px solid #F5F5F5;
     }
+    @media (max-width: 768px){
+        .all_student{
+            display:none
+        }
+    }
+
 </style>
 
 <div style="margin : 100px"></div>
 <div class="contain col-md-10">
-    <div class="col-md-3 flex-container ">
+    <div class="all_student col-md-3 flex-container">
         <div >
             <legend>所有學員</legend>
             <div style="float: left ;margin-right: 50px;width: 100%" class="card">
@@ -151,21 +155,23 @@
                     <label for="SelectStudent" class="form-label">選擇學員</label>
                     <div id="SelectStudent" ></div>
                 </div>
-                <a style="color:#212529" onclick="submit__()" class="btn btn-primary">送出</a>
+                <a style="color:#212529" onclick="submit___()" class="btn btn-primary">送出</a>
             </fieldset>
         </form>
     </div>
 </div>
-<script src="/assets/js/jquery.js"></script>
-<script src="/assets/js/jquery.min.js"></script>
+<script src="/assets/vendors/jquery/jquery.js"></script>
+<script src="/assets/vendors/bootstrap/bootstrap.js"></script>
+<script src="/assets/vendors/counterup/waypoint.js"></script>
+<script src="/assets/vendors/counterup/jquery.counterup.min.js"></script>
+<script src="/assets/vendors/jquery.isotope.js"></script>
+<script src="/assets/vendors/owl/owl.carousel.min.js"></script>
+<script src="/assets/vendors/google-map/map.js"></script>
+<script src="/assets/js/script.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.24.0/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script>
     axios.post("/myadmin/info/").then(res=>{
-        console.log('tew')
         if(res.data.errno == 0){
             users = res.data.data
             users.forEach(item=>{
@@ -193,7 +199,8 @@
             })
         }
     })
-    function submit__(){
+    function submit___(){
+        console.log('success')
         let checkArr=[];
         $("input[name='check']:checked").each(function(){
             checkArr.push($(this).val());
